--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
     "@clerk/themes": "^2.1.45",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1"
   }
 }
