--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-day-picker": "^9.3.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-spinners": "^0.14.1",
