feature-import issue cleared

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", // Defines the root directory for module resolution
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"] // Maps '@' to the root directory
     }
   }
 }
